--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ai-sdk/openai": "^1.3.21",
     "@ai-sdk/react": "^1.2.11",
     "@radix-ui/react-slot": "^1.2.0",
+    "@remotion/cli": "4.0.295",
+    "@remotion/player": "^4.0.295",
     "ai": "^4.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^3.0.0",
+    "remotion": "4.0.295",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
