--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.21",
     "@ai-sdk/react": "^1.2.11",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@remotion/cli": "4.0.295",
     "@remotion/player": "^4.0.295",
     "ai": "^4.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
